--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,6 @@ blueboat_rtt_cpp/
 VIBes-viewer
 *.log
 boat_control_config.json
-beautiful_replay/db.sqlite3
+web_interface/db.sqlite3
+coordsA.npy
+coordsB.npy
